--- a/refer-effect/parallaxEffext/jqueryPE06.html
+++ b/refer-effect/parallaxEffext/jqueryPE06.html
@@ -28,55 +28,6 @@
         .paraNav li.active a {
             border-radius: 30px;
         }
-
-        /* 한번에 나타나기 */
-        /* .content-item {
-            opacity: 0;
-            transform: translateY(100px);
-            transition: all 1s;
-        }
-        .content-item.show {
-            transform: translateY(0);
-            opacity: 1;
-        } */
-
-        /* 개별적으로 나타나기 */
-        .content-item .num {
-            opacity: 0 !important;
-            transform: translateY(200px);
-            transition: all 1s 0.1s cubic-bezier(0, 1.23, 1, 1);
-        }
-        .content-item .title {
-            opacity: 0;
-            transform: translateX(-100px);
-            transition: all 1s 0.3s cubic-bezier(0, 0.663, 0.38, 1.01);
-        }
-        .content-item .img-Wrap {
-            perspective: 500px;
-            opacity: 0;
-            transform: translateY(200px) rotate(30deg) skew(20deg);
-            transition: all 1s 0.6s cubic-bezier(0, 1.23, 1, 1);
-        }
-        .content-item .desc {
-            opacity: 0;
-            transform: translateX(-200px);
-            transition: all 1s 0.9s cubic-bezier(0, 1.23, 1, 1);
-        }
-        .content-item.show .num {
-            opacity: 0.07 !important;
-            transform: translateY(0);
-        }
-        .content-item.show .title {
-            opacity: 1;
-            transform: translateX(0);
-        }.content-item.show .img-Wrap {
-            opacity: 1;
-            transform: translateY(0) rotate(0) skew(0);
-        }
-        .content-item.show .desc {
-            opacity: 1;
-            transform: translateX(0);
-        }
         
     </style>
 </head>
@@ -84,8 +35,8 @@
 
     <!-- header -->
     <header class="paraInfo">
-        <h1><a href="index.html">Parallax Effect05 - jquery</a></h1>
-        <p>패랠랙스 스크로링 효과 - 나타나기</p>
+        <h1><a href="index.html">Parallax Effect06 - jquery</a></h1>
+        <p>패랠랙스 스크로링 효과 - 이질감</p>
     </header>
     <!-- //header -->
 ​
@@ -207,34 +158,34 @@
 ​
     <!-- footer -->
     <footer class="paraFooter">
-        <h1>Parallax <em>Scrolling</em></h1>
-        <div class="footerInfo">
-            <h2>자바스크립트</h2>
-            <ul> 
-                <li><a href="javascriptPE01.html">1</a></li>
-                <li><a href="javascriptPE02.html">2</a></li>
-                <li><a href="javascriptPE03.html">3</a></li>
-                <li><a href="javascriptPE04.html">4</a></li>
-                <li><a href="javascriptPE05.html">5</a></li>
-                <li><a href="javascriptPE06.html">6</a></li>
-                <li><a href="javascriptPE07.html">7</a></li>
-                <li><a href="javascriptPE08.html">8</a></li>
-            </ul>
-        </div>
-        <div class="footerInfo">
-            <h2>제이쿼리</h2>
-            <ul>
-                <li><a href="jqueryPE01.html">1</a></li>
-                <li><a href="jqueryPE02.html">2</a></li>
-                <li><a href="jqueryPE03.html">3</a></li>
-                <li><a href="jqueryPE04.html">4</a></li>
-                <li class="active"><a href="jqueryPE05.html">5</a></li>
-                <li><a href="jqueryPE06.html">6</a></li>
-                <li><a href="jqueryPE07.html">7</a></li>
-                <li><a href="jqueryPE08.html">8</a></li>
-            </ul>
-        </div>
-  </footer>
+      <h1>Parallax <em>Scrolling</em></h1>
+      <div class="footerInfo">
+          <h2>자바스크립트</h2>
+          <ul> 
+              <li><a href="javascriptPE01.html">1</a></li>
+              <li><a href="javascriptPE02.html">2</a></li>
+              <li><a href="javascriptPE03.html">3</a></li>
+              <li><a href="javascriptPE04.html">4</a></li>
+              <li><a href="javascriptPE05.html">5</a></li>
+              <li><a href="javascriptPE06.html">6</a></li>
+              <li><a href="javascriptPE07.html">7</a></li>
+              <li><a href="javascriptPE08.html">8</a></li>
+          </ul>
+      </div>
+      <div class="footerInfo">
+          <h2>제이쿼리</h2>
+          <ul>
+              <li><a href="jqueryPE01.html">1</a></li>
+              <li><a href="jqueryPE02.html">2</a></li>
+              <li><a href="jqueryPE03.html">3</a></li>
+              <li><a href="jqueryPE04.html">4</a></li>
+              <li><a href="jqueryPE05.html">5</a></li>
+              <li class="active"><a href="jqueryPE06.html">6</a></li>
+              <li><a href="jqueryPE07.html">7</a></li>
+              <li><a href="jqueryPE08.html">8</a></li>
+          </ul>
+      </div>
+    </footer>
     <!-- //footer -->
 
     <!-- source -->
@@ -380,133 +331,11 @@
 </code></pre>
                     </div>
                     <div class="css">
-<pre><code class="language-css">.paraNav {
-    top: 20px;
-    transition: top 0.4s ease;
-}
-.paraNav.hide {
-    top: -200px;
-}
-.paraNav li a {
-    width: 30px;
-    height: 30px;
-    padding: 5px;
-}
-.paraNav li.active a {
-    border-radius: 30px;
-}
-
-/* 한번에 나타나기 */
-/* .content-item {
-    opacity: 0;
-    transform: translateY(100px);
-    transition: all 1s;
-}
-.content-item.show {
-    transform: translateY(0);
-    opacity: 1;
-} */
-
-/* 개별적으로 나타나기 */
-.content-item .num {
-    opacity: 0 !important;
-    transform: translateY(200px);
-    transition: all 1s 0.1s cubic-bezier(0, 1.23, 1, 1);
-}
-.content-item .title {
-    opacity: 0;
-    transform: translateX(-100px);
-    transition: all 1s 0.3s cubic-bezier(0, 0.663, 0.38, 1.01);
-}
-.content-item .img-Wrap {
-    perspective: 500px;
-    opacity: 0;
-    transform: translateY(200px) rotate(30deg) skew(20deg);
-    transition: all 1s 0.6s cubic-bezier(0, 1.23, 1, 1);
-}
-.content-item .desc {
-    opacity: 0;
-    transform: translateX(-200px);
-    transition: all 1s 0.9s cubic-bezier(0, 1.23, 1, 1);
-}
-.content-item.show .num {
-    opacity: 0.07 !important;
-    transform: translateY(0);
-}
-.content-item.show .title {
-    opacity: 1;
-    transform: translateX(0);
-}.content-item.show .img-Wrap {
-    opacity: 1;
-    transform: translateY(0) rotate(0) skew(0);
-}
-.content-item.show .desc {
-    opacity: 1;
-    transform: translateX(0);
-}
+<pre><code class="language-css">
 </code></pre>
                     </div>
                     <div class="javascript">
-<pre><code class="language-js">$(".paraNav ul li").click(function(e){
-    e.preventDefault();
-    let target = $(this);
-    let index = target.index();
-    let section = $(".content-item").eq(index);
-    let offset = section.offset().top;
-
-    $("html, body").animate({scrollTop: offset}, 600);
-})
-
-$(window).scroll(function(){
-    let scrollTop = $(window).scrollTop() + $(window).height()/2;
-
-    // if(scrollTop >= $("#section1").offset().top){
-    //     $("#section1").addClass("show");
-    // }
-    // if(scrollTop >= $("#section2").offset().top){
-    //     $("#section2").addClass("show");
-    // }
-    // if(scrollTop >= $("#section3").offset().top){
-    //     $("#section3").addClass("show");
-    // }
-    // if(scrollTop >= $("#section4").offset().top){
-    //     $("#section4").addClass("show");
-    // }
-    // if(scrollTop >= $("#section5").offset().top){
-    //     $("#section5").addClass("show");
-    // }
-    // if(scrollTop >= $("#section6").offset().top){
-    //     $("#section6").addClass("show");
-    // }
-    // if(scrollTop >= $("#section7").offset().top){
-    //     $("#section7").addClass("show");
-    // }
-    // if(scrollTop >= $("#section8").offset().top){
-    //     $("#section8").addClass("show");
-    // }
-    // if(scrollTop >= $("#section9").offset().top){
-    //     $("#section9").addClass("show");
-    // }
-
-    // for(let i=1; i&lt;10; i++){
-    //     if(scrollTop >= $("#section"+i).offset().top){
-    //         $("#section"+i).addClass("show");
-    //     } else {
-    //         $("#section"+i).removeClass("show");
-    //     }
-    // };
-
-    // each
-    $(".content-item").each(function(index){
-        if(scrollTop > $(this).offset().top){
-            $(this).addClass("show");
-            $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
-        }                
-    })
-
-    // 출력용
-    $(".paraScroll span").text(parseInt(scrollTop));
-})
+<pre><code class="language-js">
 </code></pre> 
                     </div>
                 </div>
@@ -536,55 +365,53 @@ $(window).scroll(function(){
         })
 
         $(window).scroll(function(){
-            let scrollTop = $(window).scrollTop() + $(window).height()/2;
+            let scrollTop = $(window).scrollTop();
 
-            // if(scrollTop >= $("#section1").offset().top){
-            //     $("#section1").addClass("show");
-            // }
-            // if(scrollTop >= $("#section2").offset().top){
-            //     $("#section2").addClass("show");
-            // }
-            // if(scrollTop >= $("#section3").offset().top){
-            //     $("#section3").addClass("show");
-            // }
-            // if(scrollTop >= $("#section4").offset().top){
-            //     $("#section4").addClass("show");
-            // }
-            // if(scrollTop >= $("#section5").offset().top){
-            //     $("#section5").addClass("show");
-            // }
-            // if(scrollTop >= $("#section6").offset().top){
-            //     $("#section6").addClass("show");
-            // }
-            // if(scrollTop >= $("#section7").offset().top){
-            //     $("#section7").addClass("show");
-            // }
-            // if(scrollTop >= $("#section8").offset().top){
-            //     $("#section8").addClass("show");
-            // }
-            // if(scrollTop >= $("#section9").offset().top){
-            //     $("#section9").addClass("show");
-            // }
+            // let offset1 = scrollTop - $("#section1").offset().top;
+            // let offset2 = scrollTop - $("#section2").offset().top;
+            // let offset3 = scrollTop - $("#section3").offset().top;
+            // let offset4 = scrollTop - $("#section4").offset().top;
+            // let offset5 = scrollTop - $("#section5").offset().top;
+            // let offset6 = scrollTop - $("#section6").offset().top;
+            // let offset7 = scrollTop - $("#section7").offset().top;
+            // let offset8 = scrollTop - $("#section8").offset().top;
+            // let offset9 = scrollTop - $("#section9").offset().top;
+            
 
+            // $("#section1").css({transform: "translateX("+offset1+"px)"});
+            // $("#section2").css({transform: "translateX("+offset2+"px)"});
+            // $("#section3").css({transform: "translateX("+offset3+"px)"});
+            // $("#section4").css({transform: "translateX("+offset4+"px)"});
+            // $("#section5").css({transform: "translateX("+offset5+"px)"});
+            // $("#section6").css({transform: "translateX("+offset6+"px)"});
+            // $("#section7").css({transform: "translateX("+offset7+"px)"});
+            // $("#section8").css({transform: "translateX("+offset8+"px)"});
+            // $("#section9").css({transform: "translateX("+offset9+"px)"});
+
+            // for문
             // for(let i=1; i<10; i++){
-            //     if(scrollTop >= $("#section"+i).offset().top){
-            //         $("#section"+i).addClass("show");
-            //     } else {
-            //         $("#section"+i).removeClass("show");
-            //     }
+            //     let offset = scrollTop - $("#section"+i).offset().top;
+            //     $("#section"+i).css({transform: "translateX("+offset+"px)"});
+            //     // $("#section"+i+ " .desc").css({transform: "translateX("+offset+"px)"});
             // };
 
-            // each
+            // each문
             $(".content-item").each(function(index){
-                if(scrollTop > $(this).offset().top){
-                    $(this).addClass("show");
+                let offset1 = (scrollTop - $(this).offset().top) * 0.1;
+                let offset2 = (scrollTop - $(this).offset().top) * 0.2;
+
+                $(this).find(".img-jq").css({transform: "translateY("+ offset2 +"px)"});
+                $(this).find(".desc").css({transform: "translateY("+ offset1 +"px)"});
+
+                // 메뉴
+                if(scrollTop > $(this).offset().top - 2){
                     $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
-                }                
-            })
+                }
+            });
 
             // 출력용
-            $(".paraScroll span").text(parseInt(scrollTop));
-        })
+            $(".paraScroll span").text(scrollTop);
+        });
 
         //source
         modalPE01();
