--- a/refer-effect/parallaxEffext/index.html
+++ b/refer-effect/parallaxEffext/index.html
@@ -24,6 +24,7 @@
             <li><a href="javascriptPE03.html">3</a></li>
             <li><a href="javascriptPE04.html">4</a></li>
             <li><a href="javascriptPE05.html">5</a></li>
+            <li><a href="javascriptPE06.html">6</a></li>
         </ul>
         <ul>
             <li><a href="jqueryPE01.html">1</a></li>
@@ -31,6 +32,7 @@
             <li><a href="jqueryPE03.html">3</a></li>
             <li><a href="jqueryPE04.html">4</a></li>
             <li><a href="jqueryPE05.html">5</a></li>
+            <li><a href="jqueryPE06.html">6</a></li>
         </ul>
     </nav>
 
