--- a/refer-effect/gameEffect/quiz/web20160710.html
+++ b/refer-effect/gameEffect/quiz/web20160710.html
@@ -672,10 +672,10 @@
                 quizNum : 24,
                 quizAsk : "HTML 문서의 시작을 알려주는 태그는?",
                 quizChoice : {
-                    1 : "<begin>", 
-                    2 : "<body>", 
-                    3 : "<html>", 
-                    4 : "<start>"
+                    1 : "begin", 
+                    2 : "body", 
+                    3 : "html", 
+                    4 : "start"
                 },
                 quizAnswer : 3,
                 quizEx : "HTML 문서 중 최상위 요소 즉 맨 처음 코도의 이름이 <html> 이므로 문서의 시작은 즉 최상위 요소라고 생각하면 된다."
@@ -854,13 +854,13 @@
                 quizNum : 38,
                 quizAsk : "다음 중 이미지 관련 HTML 태그가 아닌 것은?",
                 quizChoice : {
-                    1 : "<IMG>", 
-                    2 : "<MAP>", 
-                    3 : "<AREA>", 
-                    4 : "<SELECT>"
+                    1 : "IMG", 
+                    2 : "MAP", 
+                    3 : "AREA", 
+                    4 : "SELECT"
                 },
                 quizAnswer : 4,
-                quizEx : "1.<IMG>:이미지 첨부<br>2.<MAP>:이미지 맵<br>3.<AREA>:이미지 맵의 영역 지정<br>4.<SELECT>:선택하는 드롭박스 만들기 태그"
+                quizEx : "1.IMG:이미지 첨부<br>2.MAP:이미지 맵<br>3.AREA:이미지 맵의 영역 지정<br>4.SELECT:선택하는 드롭박스 만들기 태그"
             },
 
             {
@@ -1101,13 +1101,13 @@
                 quizNum : 57,
                 quizAsk : "다음의 HTML 태그 중 종료 태그가 없는 것은?",
                 quizChoice : {
-                    1 : "<HTML>", 
-                    2 : "<BODY>", 
-                    3 : "<HR>", 
-                    4 : "<DIV>"
+                    1 : "HTML", 
+                    2 : "BODY", 
+                    3 : "HR", 
+                    4 : "DIV"
                 },
                 quizAnswer : 3,
-                quizEx : "종료태그가 없는 태그: <BR>, <IMG>, <HR>태그는 종료태그가 없음<br> <DT>, <DD>태그는 종료태그가 있으나 생략 가능함<br> <hr> 태그는 콘텐츠 내용에서 주제가 바뀔 때 사용할 수 있는 수평 가로선을 정의할 때 사용합니다.<br> <div> 태그는 HTML 문서에서 특정 영역(division)이나 구획(section)을 정의할 때 사용합니다."
+                quizEx : "종료태그가 없는 태그: BR, IMG, HR태그는 종료태그가 없음<br> DT, DD태그는 종료태그가 있으나 생략 가능함<br> hr태그는 콘텐츠 내용에서 주제가 바뀔 때 사용할 수 있는 수평 가로선을 정의할 때 사용합니다.<br> div태그는 HTML 문서에서 특정 영역(division)이나 구획(section)을 정의할 때 사용합니다."
             },
 
             {
