--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -19,7 +19,7 @@
 
     <nav id="nav">
         <ul>
-            <li><a href="#">1</a></li>
+            <li><a href="quiz/quiz01.html">1</a></li>
             <li><a href="#">2</a></li>
         </ul>
     </nav>
