--- a/refer-effect/gameEffect/quiz/quiz04.html
+++ b/refer-effect/gameEffect/quiz/quiz04.html
@@ -480,7 +480,7 @@
         
         // 햄버거 메뉴
         document.querySelector(".ham").addEventListener("click", () => {
-            document.querySelector("nav").classList.toggle("show");;;;;;;;;;;;;;;;;;;;;;;;;
+            document.querySelector("nav").classList.toggle("show");
         });
     </script>
     <!-- //script -->
